# examination

./: .envrc  .gitignore  Cargo.toml  LICENSE  README.md  demo.html
.config/: config.json5
.data/: examination.json  question.json
.github/workflows/: cd.yml  rust.yml
src/: action.rs  app.rs  components.rs  config.rs  main.rs
src/components/: alert.rs  area_util.rs  examination.rs  timer.rs  user_input.rs
src/components/examination/: question.rs
